# pricely

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  cegus_lyapunov.py  circle_following.py  environment.yml  lyapunov_learner_cvx.py  lyapunov_learner_nnet.py  lyapunov_utlis.py  lyapunov_verifier.py  mypy.ini  nnet_utils.py  path_following_stanley.py  pyproject.toml  requirements.txt  run.py  run_hscc2025.py  run_hscc2025_polys.py  run_hscc2025_trans.py  van_der_pol.py
docker/: Dockerfile  HSCC2025-repeatability.md  README.md  requirements.txt
examples/: analyze_ex_2d.py  circle_following.py  ex_1d.py  fossil_hiord4.py  fossil_nonpoly0.py  fossil_nonpoly1.py  fossil_nonpoly2.py  fossil_nonpoly3.py  fossil_poly1.py  fossil_poly2.py  fossil_poly3.py  fossil_poly4.py  hscc2014_normalized_pendulum.py  inverted_pendulum.py  lcss2020_eq13.py  lcss2020_eq14.py  lcss2020_eq15.py  lcss2020_eq5.py  neurips2022_inverted_pendulum.py  neurips2022_unicycle_following.py  neurips2022_van_der_pol.py  path_following_stanley.py  plot_phase_2d.ipynb  plot_utils_2d.py  run_synth.py  run_verify.py  traj_tracking_wheeled.py  van_der_pol.py
pricely/: candidates.py  cegus_lyapunov.py  gen_cover.py  learner_cvxpy.py  learner_mock.py  presolve.py  utils.py  verifier_dreal.py
pricely/approx/: boxes.py  simplices.py
pricely/learner/: cvxpy.py  mock.py
scripts/: plot_phaseportrait_2d.py  run_cegus.py  run_verify.py  utils_plotting_2d.py  validate_lip_bbox.py  validate_lya_cand.py
tests/: test_approx_boxes.py  test_approx_simplices.py  test_verifier_smt_dreal.py
(+1 files in other folders)
