[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pricely"
version = "0.1.0"
authors = [
  { name="Chiao Hsieh", email="hsieh.chiao.7k@kyoto-u.ac.jp" },
]
description = "PRIoritzed CounterExample-guided LYapunov function."
# readme = "README.md"
requires-python = ">=3.10"
# license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cvxpy',
    'dreal',
    'numpy',
    'scipy',
    'tqdm>=4.66.0'
]

[project.urls]
"Repository" = "https://git.iimc.kyoto-u.ac.jp/chiao709hsieh/pricely"

[tool.setuptools]
packages = ["pricely"]
